platform/components/runners/infra/network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deploy-receiver
spec:
  podSelector:
    matchLabels:
      actions.github.com/scale-set-name: deploy-amd64
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: flux-system
      podSelector:
        matchLabels:
          app: notification-controller
    ports:
    - protocol: TCP
      port: 9292
